// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`user - get agency danish 1`] = `
Object {
  "data": Object {
    "user": null,
  },
  "errors": Array [
    [GraphQLError: Cannot read properties of undefined (reading 'address')],
    [GraphQLError: Cannot read properties of undefined (reading 'postalCode')],
    [GraphQLError: Cannot read properties of undefined (reading 'mail')],
    [GraphQLError: Cannot read properties of undefined (reading 'name')],
  ],
}
`;

exports[`user - get agency english 1`] = `
Object {
  "data": Object {
    "user": null,
  },
  "errors": Array [
    [GraphQLError: Cannot read properties of undefined (reading 'address')],
    [GraphQLError: Cannot read properties of undefined (reading 'postalCode')],
    [GraphQLError: Cannot read properties of undefined (reading 'mail')],
    [GraphQLError: Cannot read properties of undefined (reading 'name')],
  ],
}
`;

exports[`user - get basic data 1`] = `
Object {
  "data": Object {
    "user": null,
  },
  "errors": Array [
    [GraphQLError: Cannot read properties of undefined (reading 'address')],
    [GraphQLError: Cannot read properties of undefined (reading 'postalCode')],
    [GraphQLError: Cannot read properties of undefined (reading 'mail')],
    [GraphQLError: Cannot read properties of undefined (reading 'country')],
    [GraphQLError: Cannot read properties of undefined (reading 'name')],
  ],
}
`;

exports[`user - get debt 1`] = `
Object {
  "data": Object {
    "user": null,
  },
  "errors": Array [
    [GraphQLError: Cannot return null for non-nullable field User.debt.],
  ],
}
`;

exports[`user - get loans 1`] = `
Object {
  "data": Object {
    "user": null,
  },
  "errors": Array [
    [GraphQLError: Cannot return null for non-nullable field User.loans.],
  ],
}
`;

exports[`user - get loans 2`] = `
Object {
  "data": Object {
    "user": null,
  },
  "errors": Array [
    [GraphQLError: Cannot return null for non-nullable field User.loans.],
  ],
}
`;

exports[`user - get orders 1`] = `
Object {
  "data": Object {
    "user": null,
  },
  "errors": Array [
    [GraphQLError: Cannot return null for non-nullable field User.orders.],
  ],
}
`;
